Fri Sep  8 20:03:26 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connection_Handler.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connection_Handler.cpp:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connection_Handler.cpp:
        * tao/Strategies/DIOP_Connection_Handler.cpp:
        * tao/Strategies/SCIOP_Connection_Handler.cpp:
        * tao/Strategies/UIOP_Connection_Handler.cpp:
        * NEWS:
          Applied fix from Tue Aug 29 17:40:01 UTC 2006  Phil Mesnier
          <mesnier_p@ociweb.com> to other protocols. This explicitly calls
          release_os_resources from the derived destructor, as was
          originally intended. This resolves bug 2649.

Thu Sep  7 14:19:58 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tao/Transport_Connector.inl:
          Removed the extra semicolon. This was creating havoc on the
          windows builds.

Tue Sep  5 20:39:15 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tao/PortableServer/Servant_var.h:
        * tao/PortableServer/Servant_var.inl:
          Commented out the member templates code. See:
          Tue Aug 15 21:25:50 UTC 2006  Ciju John  <johnc@ociweb.com>

Tue Sep  5 13:56:58 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tests/Bug_1476_Test/run_test.pl:
          Took out a debug print statement.

Thu Aug 31 23:05:46 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tao/ORB_Core.cpp:
          Access to the TAO_ORB_Core_Static_Resources was through the
          static instance() API. This created a bug when the object which
          earlier was a true singleton was converted to a service object
          under the control of the service config. The service config
          depending upon the access point can either return the global
          object or the object local to the particular orb. In this case
          (during an invocation) we need to access the local object and